--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ website:
   announcement: 
     icon: info-circle
     dismissable: true
-    content: "Se ha añadido la página [Distribución normal](/contents/distribucion_normal.qmd)."
+    content: "Se ha añadido la página [Estadística (II)](/contents/estadistica2.qmd)."
     type: info
     position: below-navbar
   title: "CálculoGATE"
@@ -25,8 +25,10 @@ website:
         text: Puntos críticos
       - href: contents/aproximacion_integrales.qmd
         text: Aproximación de integrales
-      - href: contents/distribucion_normal.qmd
-        text: Distribución Normal
+      - href: contents/estadistica.qmd
+        text: Estadística (I)
+      - href: contents/estadistica2.qmd
+        text: Estadística (II)
 format:
   html:
     theme:
